# py-daga

./: .gitignore  CNAME  README.md  pyproject.toml
.github/workflows/: docs.yml  manual-version.yml  publish.yml  version-bump.yml
docs/: index.html
docs/src/: action.html  flow.html  meta.html  utils.html
src/: __init__.py  action.py  flow.py  meta.py  utils.py
test/: test_action.py  test_action_creation.py  test_utils.py
test/flow/: test_flow.py  values_for_test.py
